<resources>
    <string name="app_name">Rastel</string>
    <string name="title_activity_login">Rastel login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to Rastel</string>
    <string name="welcome_subtitle">Crowdsourced realtime COVID-19 contact tracing</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>